@@ -7,8 +7,8 @@
  * Copyright (c) 1995-1997 Sun Microsystems, Inc.
  * Copyright (c) 1998-1999 by Scriptics Corporation.
  *
- * See the file "license.terms" for information on usage and redistribution of
- * this file, and for a DISCLAIMER OF ALL WARRANTIES.
+ * See the file "license.terms" for information on usage and redistribution
+ * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
  * RCS: @(#) $Id$
  */
@@ -1618,7 +1618,7 @@ TclpOpenFileChannel(
     fsPtr->fd = fd;
 
     fsPtr->channel = Tcl_CreateChannel(channelTypePtr, channelName,
-	    (ClientData) fsPtr, channelPermissions);
+	    fsPtr, channelPermissions);
 
     if (translation != NULL) {
 	/*
@@ -1683,7 +1683,7 @@ Tcl_MakeFileChannel(
 #endif /* SUPPORTS_TTY */
     if ((getsockname(fd, &sockaddr, &sockaddrLen) == 0)
 	    && (sockaddrLen > 0) && (sockaddr.sa_family == AF_INET)) {
-	return TclpMakeTcpClientChannelMode((ClientData) INT2PTR(fd), mode);
+	return TclpMakeTcpClientChannelMode(INT2PTR(fd), mode);
     } else {
 	channelTypePtr = &fileChannelType;
 	fsPtr = (FileState *) ckalloc((unsigned) sizeof(FileState));
@@ -1693,7 +1693,7 @@ Tcl_MakeFileChannel(
     fsPtr->fd = fd;
     fsPtr->validMask = mode | TCL_EXCEPTION;
     fsPtr->channel = Tcl_CreateChannel(channelTypePtr, channelName,
-	    (ClientData) fsPtr, mode);
+	    fsPtr, mode);
 
     return fsPtr->channel;
 }
@@ -1767,7 +1767,7 @@ TclpGetDefaultStdChannel(
 #undef ZERO_OFFSET
 #undef ERROR_OFFSET
 
-    channel = Tcl_MakeFileChannel((ClientData) INT2PTR(fd), mode);
+    channel = Tcl_MakeFileChannel(INT2PTR(fd), mode);
     if (channel == NULL) {
 	return NULL;
     }
@@ -1827,7 +1827,7 @@ Tcl_GetOpenFile(
     FILE *f;
 
     chan = Tcl_GetChannel(interp, chanID, &chanMode);
-    if (chan == (Tcl_Channel) NULL) {
+    if (chan == NULL) {
 	return TCL_ERROR;
     }
     if ((forWriting) && ((chanMode & TCL_WRITABLE) == 0)) {
